Changed column order a bit.

--- a/.ncmpcpp/config
+++ b/.ncmpcpp/config
@@ -9,7 +9,7 @@ tag_editor_album_format = "{(%y) }%b"
 browser_playlist_prefix = "$7playlist$9 "
 selected_item_prefix = "$8"
 selected_item_suffix = "$9"
-song_columns_list_format = "(6)[white]{l} (15)[blue]{a} (35)[white]{b} (53)[blue]{t}"
+song_columns_list_format = "(6)[white]{l} (25)[blue]{a} (43)[white]{t} (35)[blue]{b}"
 playlist_display_mode = "columns"
 browser_display_mode = "columns"
 incremental_seeking = "yes"
